#1012 add workspace and repositories size to admin sorting
